@@ -10,7 +10,7 @@ import java.util.LinkedList;
 import java.util.Map;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
-import javax.script.Bindings;
+import javax.script.ScriptContext;
 import lombok.Data;
 
 import static java.io.StreamTokenizer.TT_EOF;
@@ -59,7 +59,7 @@ public interface Magic {
     /**
      * Entry-point method.  Executed in the {@link ganymede.shell.Shell}.
      * Default implementation sends to the
-     * {@link #execute(Bindings,String,String)} method in the
+     * {@link #execute(ScriptContext,String,String)} method in the
      * {@link jdk.jshell.JShell} instance.
      *
      * @param   shell           The {@link Shell}.
@@ -89,12 +89,11 @@ public interface Magic {
      * Implementation method.  Executed in the {@link jdk.jshell.JShell}
      * instance.
      *
-     * @param   bindings        The {@link jdk.jshell.JShell}
-     *                          {@link Bindings}.
+     * @param   context         The {@link ScriptContext}.
      * @param   line0           The initial magic line.
      * @param   code            The remainder of the cell.
      */
-    public void execute(Bindings bindings,
+    public void execute(ScriptContext context,
                         String line0, String code) throws Exception;
 
     /**
@@ -194,8 +193,8 @@ public interface Magic {
      * {@link jdk.jshell.JShell} instance.  The
      * {@link #sendTo(Shell,String,String,String)} method packs the
      * arguments and creates a
-     * {@link #receive(String,Bindings,String,String)} expression which is
-     * evaluated in the {@link jdk.jshell.JShell}.
+     * {@link #receive(String,ScriptContext,String,String)} expression which
+     * is evaluated in the {@link jdk.jshell.JShell}.
      *
      * @param   shell           The {@link Shell}.
      * @param   name            The magic name.
@@ -204,7 +203,7 @@ public interface Magic {
      */
     public static void sendTo(Shell shell, String name, String line0, String code) throws Exception {
         var expression =
-            String.format("__.invokeStaticMethod(\"%s\", \"%s\", new Class<?>[] { String.class, javax.script.Bindings.class, String.class, String.class }, \"%s\", __.bindings, \"%s\", \"%s\")",
+            String.format("__.invokeStaticMethod(\"%s\", \"%s\", new Class<?>[] { String.class, javax.script.ScriptContext.class, String.class, String.class }, \"%s\", __.context, \"%s\", \"%s\")",
                           Magic.class.getName(), "receive",
                           name, encode(line0), encode(code));
 
@@ -213,7 +212,7 @@ public interface Magic {
 
     /**
      * Static {@link MagicMap} instance used by
-     * {@link #receive(String,Bindings,String,String)}.
+     * {@link #receive(String,ScriptContext,String,String)}.
      */
     public static MagicMap MAP = new MagicMap();
 
@@ -221,21 +220,20 @@ public interface Magic {
      * Static method to receive a request in the {@link jdk.jshell.JShell}
      * instance.  The {@link #sendTo(Shell,String,String,String)} method
      * packs the arguments and creates a
-     * {@link #receive(String,Bindings,String,String)} expression which is
-     * evaluated in the {@link jdk.jshell.JShell}.
+     * {@link #receive(String,ScriptContext,String,String)} expression which
+     * is evaluated in the {@link jdk.jshell.JShell}.
      *
      * @param   name            The magic name.
-     * @param   bindings        The {@link jdk.jshell.JShell}
-     *                          {@link Bindings}.
+     * @param   context         The {@link ScriptContext}.
      * @param   line0           The initial magic line.
      * @param   code            The remainder of the cell.
      */
-    public static void receive(String name, Bindings bindings,
+    public static void receive(String name, ScriptContext context,
                                String line0, String code) throws Exception {
         MAP.reload();
 
         if (MAP.containsKey(name)) {
-            MAP.get(name).execute(bindings, decode(line0), decode(code));
+            MAP.get(name).execute(context, decode(line0), decode(code));
         } else {
             throw new IllegalStateException("Magic '" + name + "' not found");
         }
