@@ -4,7 +4,7 @@ import ball.annotation.ServiceProviderFor;
 import ganymede.server.renderer.ForType;
 import ganymede.shell.Magic;
 import java.util.stream.Stream;
-import javax.script.Bindings;
+import javax.script.ScriptContext;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
@@ -21,13 +21,13 @@ import lombok.extern.log4j.Log4j2;
 @NoArgsConstructor @ToString @Log4j2
 public class HTML extends Thymeleaf {
     @Override
-    protected void execute(Bindings bindings,
+    protected void execute(ScriptContext context,
                            String[] argv, String code) throws Exception {
         argv =
             Stream.of(new String[] { super.getMagicNames()[0] }, argv)
             .flatMap(Stream::of)
             .toArray(String[]::new);
 
-        super.execute(bindings, argv, code);
+        super.execute(context, argv, code);
     }
 }
