@@ -15,7 +15,7 @@ import java.io.StringWriter;
 import java.util.Comparator;
 import java.util.List;
 import java.util.TreeMap;
-import javax.script.Bindings;
+import javax.script.ScriptContext;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 import lombok.extern.log4j.Log4j2;
@@ -45,7 +45,7 @@ public class Magics extends AbstractMagic {
     }
 
     @Override
-    public void execute(Bindings bindings,
+    public void execute(ScriptContext context,
                         String line0, String code) throws Exception {
         throw new IllegalArgumentException(line0);
     }
