@@ -2,7 +2,7 @@ package ganymede.shell.magic;
 
 import ball.annotation.ServiceProviderFor;
 import ganymede.shell.Magic;
-import javax.script.Bindings;
+import javax.script.ScriptContext;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 import lombok.extern.log4j.Log4j2;
@@ -18,10 +18,10 @@ import lombok.extern.log4j.Log4j2;
 @NoArgsConstructor @ToString @Log4j2
 public class Ruby extends Script {
     @Override
-    public void execute(Bindings bindings,
+    public void execute(ScriptContext context,
                         String line0, String code) throws Exception {
         try {
-            super.execute(bindings,
+            super.execute(context,
                           String.format("%s%s %s",
                                         CELL, super.getMagicNames()[0],
                                         line0.substring(CELL.length())),
