@@ -3,7 +3,7 @@ package ganymede.shell.magic;
 import ball.annotation.ServiceProviderFor;
 import ganymede.shell.Magic;
 import java.util.stream.Stream;
-import javax.script.Bindings;
+import javax.script.ScriptContext;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 import lombok.extern.log4j.Log4j2;
@@ -23,7 +23,7 @@ import static java.nio.charset.StandardCharsets.UTF_8;
 @NoArgsConstructor @ToString @Log4j2
 public class Script extends AbstractMagic {
     @Override
-    public void execute(Bindings bindings,
+    public void execute(ScriptContext context,
                         String line0, String code) throws Exception {
         var argv =
             Stream.of(Magic.getCellMagicCommand(line0))
